k8s/sample/nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  labels:
    app: nginx-nodeport
spec:
  type: NodePort
  ports:
    - name: "nginx"
      port: 80
      targetPort: 80
  selector:
    app: nginx
